Getting the Details from the Url using bs4.

--- a/Cricket Score Tracker/cricscore.ipynb
+++ b/Cricket Score Tracker/cricscore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,23 +10,15 @@
     "from tkinter.ttk import Combobox # Helps in making the dropdown menu\n",
     "from PIL import ImageTk # Helps in setting up the background\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CricketScore:\n",
     "    def __init__(self, rootWindow):\n",
@@ -42,17 +34,46 @@
     "        self.matches = self.match_details()\n",
     "\n",
     "    def match_details(self):\n",
-    "        details = self.scrap()\n",
+    "        details = self.scrap() #? Having the detail of All the scorecards.\n",
+    "\n",
+    "        live_match={}\n",
+    "        for detail in details:\n",
+    "            live_team_details ={}\n",
+    "            summary = self.match_summary(detail)\n",
+    "            if summary not in None:\n",
+    "                match_header = self.match_header(detail).text\n",
+    "                teams = self.teams_name(detail)\n",
     "\n",
     "\n",
     "    def scrap(self):\n",
     "        URL = 'https://www.cricbuzz.com/'\n",
-    "        page = requests.get(URL)"
+    "        page = requests.get(URL)\n",
+    "        soup = BeautifulSoup(page.content, \"html.parser\")\n",
+    "        results = soup.find(id= \"match_menu_container\")\n",
+    "        scrap_result = results.find_all(\"li\", class_=\"cb-match-card\")\n",
+    "        return scrap_result\n",
+    "    \n",
+    "\n",
+    "    def match_summary(self, detail):\n",
+    "        return detail.find(\"div\", class_= \"cb-mtch-crd-state\")\n",
+    "    \n",
+    "    def match_header(detail):\n",
+    "        return detail.find(\"div\", class_=\"cb-mtch-crd-hdr\")\n",
+    "    \n",
+    "    def teams_name(detail):\n",
+    "        t = []\n",
+    "        team1_detail = detail.find(\"div\", class_=\"cb-hmcg-bat-txt\").text\n",
+    "        team1_index = re.search(r\"\\d\", team1_detail).start() if re.search(r\"\\d\", team1_detail) else len(team1_detail)\n",
+    "        team2_detail = detail.find(\"div\", class_=\"cb-hmcg-bwl-txt\").text\n",
+    "        team2_index = re.search(r\"\\d\", team2_detail).start() if re.search(r\"\\d\", team2_detail) else len(team2_detail)\n",
+    "        t.append(team1_detail[:team1_index])\n",
+    "        t.append(team2_detail[:team2_index])\n",
+    "        return t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,23 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\vedan\\Documents\\Resources\\5 Days 5 Python Projects\\Cricket Score Tracker\\cricscore.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vedan/Documents/Resources/5%20Days%205%20Python%20Projects/Cricket%20Score%20Tracker/cricscore.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/vedan/Documents/Resources/5%20Days%205%20Python%20Projects/Cricket%20Score%20Tracker/cricscore.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     main()\n",
-      "\u001b[1;32mc:\\Users\\vedan\\Documents\\Resources\\5 Days 5 Python Projects\\Cricket Score Tracker\\cricscore.ipynb Cell 4\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vedan/Documents/Resources/5%20Days%205%20Python%20Projects/Cricket%20Score%20Tracker/cricscore.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rootWindow \u001b[39m=\u001b[39m Tk()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/vedan/Documents/Resources/5%20Days%205%20Python%20Projects/Cricket%20Score%20Tracker/cricscore.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m obj \u001b[39m=\u001b[39m CricketScore(rootWindow)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/vedan/Documents/Resources/5%20Days%205%20Python%20Projects/Cricket%20Score%20Tracker/cricscore.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m rootWindow\u001b[39m.\u001b[39;49mmainloop()\n",
-      "File \u001b[1;32mc:\\Users\\vedan\\anaconda3\\Lib\\tkinter\\__init__.py:1485\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[1;34m(self, n)\u001b[0m\n\u001b[0;32m   1483\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmainloop\u001b[39m(\u001b[39mself\u001b[39m, n\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[0;32m   1484\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1485\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtk\u001b[39m.\u001b[39;49mmainloop(n)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    main()"
