Using the fetched details to Show the information.

--- a/Cricket Score Tracker/cricscore.ipynb
+++ b/Cricket Score Tracker/cricscore.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import *\n",
+    "from tkinter import * # https://docs.python.org/3/library/tkinter.html\n",
     "from tkinter.ttk import Combobox # Helps in making the dropdown menu\n",
     "from PIL import ImageTk # Helps in setting up the background\n",
     "import requests\n",
@@ -26,12 +26,19 @@
     "        self.rootWindow.title('Live Cricket Score')\n",
     "        self.rootWindow.geometry('800x500')\n",
     "        self.bg = ImageTk.PhotoImage(file='./cric.jpg')\n",
-    "        bg = Label(self.rootWindow, image=self.bg).place(x=0, y=0)\n",
+    "        bg = Label(self.rootWindow, image= self.bg ).place(x=0, y=0)\n",
     "        self.label = Label(self.rootWindow, text='Live Matches', font=(\"times new roman\",60),compound='center').pack(padx=100, pady=50)\n",
     "\n",
     "        #? Fetching the Live Match Updates using the Web Scraping\n",
     "        self.var = StringVar()\n",
-    "        self.matches = self.match_details()\n",
+    "        self.matches = self.match_details() #* Information of the Matches\n",
+    "        self.data = [i for i in self.matches.keys()]\n",
+    "        self.cb = Combobox(self.rootWindow, values=self.data, width=50) # Setting up the dropdown menu by specifying the width\n",
+    "        self.cb.place(x=250, y=200)\n",
+    "        self.b1 = Button(self.rootWindow, text=\"Check Score\", font=(\"times new roman\", 15), command=self.show_match_detail).place(x=50, y=380)\n",
+    "\n",
+    "    def select(self):\n",
+    "        return self.cb.get()\n",
     "\n",
     "    def match_details(self):\n",
     "        details = self.scrap() #? Having the detail of All the scorecards.\n",
@@ -40,9 +47,16 @@
     "        for detail in details:\n",
     "            live_team_details ={}\n",
     "            summary = self.match_summary(detail)\n",
-    "            if summary not in None:\n",
+    "            if summary is not None:\n",
     "                match_header = self.match_header(detail).text\n",
     "                teams = self.teams_name(detail)\n",
+    "                score_card = self.team_score(detail)\n",
+    "                live_team_details['summary'] = summary.text\n",
+    "                live_team_details['match_header'] = match_header\n",
+    "                live_team_details['score_card'] = score_card[0] + \" :: \" + score_card[1]\n",
+    "                live_match[teams[0] + \"vs\" + teams[1]] = live_team_details\n",
+    "\n",
+    "        return live_match\n",
     "\n",
     "\n",
     "    def scrap(self):\n",
@@ -52,7 +66,15 @@
     "        results = soup.find(id= \"match_menu_container\")\n",
     "        scrap_result = results.find_all(\"li\", class_=\"cb-match-card\")\n",
     "        return scrap_result\n",
-    "    \n",
+    "\n",
+    "\n",
+    "    def team_score(detail):\n",
+    "        t = []\n",
+    "        team1_detail = detail.find(\"div\", class_=\"cb-hmcg-bat-txt\").text\n",
+    "        team2_detail = detail.find(\"div\", class_=\"cb-hmcg-bwl-txt\").text\n",
+    "        t.append(team1_detail)\n",
+    "        t.append(team2_detail)\n",
+    "        return t\n",
     "\n",
     "    def match_summary(self, detail):\n",
     "        return detail.find(\"div\", class_= \"cb-mtch-crd-state\")\n",
@@ -68,7 +90,22 @@
     "        team2_index = re.search(r\"\\d\", team2_detail).start() if re.search(r\"\\d\", team2_detail) else len(team2_detail)\n",
     "        t.append(team1_detail[:team1_index])\n",
     "        t.append(team2_detail[:team2_index])\n",
-    "        return t"
+    "        return t\n",
+    "    \n",
+    "    def show_match_detail(self):\n",
+    "        #! Building match details frame\n",
+    "        self.frame1 = Frame(self.rootWindow, bg=\"#ADD8E6\")\n",
+    "        self.frame1.place(x=180, y=280, width=600, height=200)\n",
+    "        #! Fetching details of match\n",
+    "        x = self.matches[self.select()]\n",
+    "        #! Displaying team names\n",
+    "        Label(self.frame1, text=self.select() + \" - \" + x['match_header'],font=(\"times new roman\",15,\"bold\"),bg=\"#ADD8E6\",fg=\"red\",bd=0).place(x=150, y=15)\n",
+    "        #! Displaying details of the match\n",
+    "        Label(self.frame1, text=\"Score Details : \", font=(\"times new roman\", 10, \"bold\"), bg=\"#ADD8E6\", fg=\"black\",bd=0).place(x=10, y=40)\n",
+    "        Label(self.frame1, text=x['score_card'], font=(\"times new roman\", 10, \"bold\"), bg=\"#ADD8E6\", fg=\"black\",bd=0).place(x=20, y=60)\n",
+    "        \n",
+    "        Label(self.frame1, text=\"Summary : \", font=(\"times new roman\", 10, \"bold\"), bg=\"#ADD8E6\", fg=\"black\",bd=0).place(x=10, y=100)\n",
+    "        Label(self.frame1, text=x['summary'], font=(\"times new roman\", 10, \"bold\"), bg=\"#ADD8E6\", fg=\"black\",bd=0).place(x=20, y=120)"
    ]
   },
   {
@@ -89,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__ == '__main__':\n",
+    "if __name__ == \"__main__\":\n",
     "    main()"
    ]
   }
